fix: z-index menu

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -251,7 +251,7 @@ footer {
     background-color: $color-light;
     font-size: .8rem;
     border-bottom-left-radius: 15px;
-    z-index: 9999;
+    z-index: 1000;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 
     li {
